--- a/Pages/propiedad.html
+++ b/Pages/propiedad.html
@@ -4,14 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- meta-viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
     <meta name="description"
         content="comprar vender o  alquilar cualquier propiedad esta al alcance en inmobiliaria martinez">
     <meta name="keywords" content="alquilar, vender, inmobiliaria, ph, edificio, comprar, tasaciones, campo, casa">
     <title>inmobiliaria martinez🏠</title>
+    <!-- icons -->
     <link rel="shortcut icon" href="../Trabajo practico nro 1/Media/favicon.ico">
     <link rel="shortcut icon" href="../Media/favicon.ico">
+    <!-- link css -->
     <link rel="stylesheet" href="../css/estilos.css">
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Poppins:wght@200&display=swap"
@@ -23,35 +28,39 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@500&display=swap"
         rel="stylesheet">
+    <!-- animate-animated -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/771a952c9e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- barra de navegación -->
     <header>
         <input type="checkbox" id="btn-menu">
         <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt=""></label>
         <nav class="menu">
-                        <ul>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="conocenos.html">Conocenos</a></li>
-                            <li><a href="comprar.html">Comprar</a></li>
-                            <li><a href="alquileres.html">Alquilar</a></li>
-                            <li><a href="vender.html">Vender</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                        </ul>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="conocenos.html">Conocenos</a></li>
+                <li><a href="comprar.html">Comprar</a></li>
+                <li><a href="alquileres.html">Alquilar</a></li>
+                <li><a href="vender.html">Vender</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
         </nav>
     </header>
     <main>
+        <section>
+        <!--seccion carrusel  -->
         <h1 class="titulo-h1 animate_animated animate__bounceIn">
             Se vende o alquila casa en Monte Hermoso
         </h1>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../Images/monte hermoso/monte1.webp" class="d-block w-100" alt="...">
+                    <img src="../Images/monte hermoso/monte1.webp" class="d-block w-100 h-25" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="../Images/monte hermoso/monte2.webp" class="d-block w-100" alt="...">
@@ -76,6 +85,9 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
+        </section>
+        <!-- section- gallery-prop -->
+        <section>
         </div>
         <div class="galeria-propiedad">
             <div class="gallery-propiedad">
@@ -138,8 +150,10 @@
                     </div>
                 </form>
             </div>
+        </section>
 
     </main>
+    <!-- pie de pagina -->
     <footer>
         <div class="container-footer">
             <div class="box-footer">
@@ -147,7 +161,8 @@
                     <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
                 </div>
                 <div class="terminos">
-                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
+                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y
+                        gestión
                         independiente. En cumplimiento de las leyes vigentes que regulan el corretaje inmobiliario, Ley
                         Nacional 25.028, Ley 22.802 de Lealtad Comercial, Ley 24.240 de Defensa al Consumidor, las
                         normas del Código Civil y Comercial de la Nación y Constitucionales, los agentes/gestores NO
@@ -182,12 +197,15 @@
             </div>
         </div>
     </footer>
+    <!-- script-bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 
 </body>
 
