--- a/Pages/vender.html
+++ b/Pages/vender.html
@@ -4,96 +4,114 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- meta-viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="vende cualquier tipo de propiedad en inmobiliaria Martinez">
-    <meta name="keywords"  content="vende, ph, edificio, campo, casa, departamento, cochera, local, oficina, hotel">
-    <title>inmobiliaria martinez🏠/ Vender</title>
+    <!-- SEO -->
+    <meta name="description"
+        content="comprar vender o  alquilar cualquier propiedad esta al alcance en inmobiliaria martinez">
+    <meta name="keywords" content="alquilar, vender, inmobiliaria, ph, edificio, comprar, tasaciones, campo, casa">
+    <title>inmobiliaria martinez🏠</title>
+    <!-- icons -->
     <link rel="shortcut icon" href="../Trabajo practico nro 1/Media/favicon.ico">
     <link rel="shortcut icon" href="../Media/favicon.ico">
+    <!-- link css -->
     <link rel="stylesheet" href="../css/estilos.css">
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Poppins:wght@200&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@500&display=swap"
+        rel="stylesheet">
+    <!-- animate-animated -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/771a952c9e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- barra de navegación -->
     <header>
         <input type="checkbox" id="btn-menu">
         <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt=""></label>
         <nav class="menu">
-                        <ul>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="conocenos.html">Conocenos</a></li>
-                            <li><a href="comprar.html">Comprar</a></li>
-                            <li><a href="alquileres.html">Alquilar</a></li>
-                            <li><a href="#">Vender</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                        </ul>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="conocenos.html">Conocenos</a></li>
+                <li><a href="comprar.html">Comprar</a></li>
+                <li><a href="alquileres.html">Alquilar</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
         </nav>
     </header>
     <main>
-        <h2 class="titulo-h1 animate_animated animate__bounceIn">
-            Publica tu propiedad
-        </h2>
-        <form class="row g-3 p-3 w-100 ">
-            <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Nombre</label>
-                <input type="email" class="form-control" placeholder="ingrese su nombre" id="inputEmail4">
-            </div>
-            <div class="col-md-6">
-                <label for="inputPassword4" class="form-label">Apellido</label>
-                <input type="password" class="form-control" placeholder="ingrese su apellido" id="inputPassword4">
-            </div>
-            <div class="col-12">
-                <label for="inputAddress" class="form-label">Dirección</label>
-                <input type="text" class="form-control" id="inputAddress"
-                    placeholder="Direccion de la propiedad a vender">
-            </div>
-            <label for="inputAddress" class="form-label">Email</label>
-            <input type="text" class="form-control" id="inputAddress"
-                placeholder="Ingrese su Email">
-            <div class="col-12">
-                <label for="inputAddress2" class="form-label">Número de telefono</label>
-                <input type="text" class="form-control" id="inputAddress2"
-                    placeholder="Numero de area sin el 0 y sin el 15">
-            </div>
-            <div class="col-md-6">
-                <label for="inputCity" class="form-label">Ciudad</label>
-                <input type="text" class="form-control" id="ciudad">
-            </div>
-            <div class="col-md-4">
-                <label for="inputState" class="form-label">Provincia</label>
-                <select id="inputState" class="form-select">
-                    <option selected>Buenos Aires</option>
-                    <option> La Pampa</option>
-                    <option> Catamarca</option>
-                    <option> Jujuy</option>
-                    <option> Cordoba</option>
-                </select>
-            </div>
-            <div class="col-md-2">
-                <label for="inputZip" class="form-label">Codigo postal</label>
-                <input type="text" class="form-control" id="inputZip">
-            </div>
-            <div class="mb-3">
-                <label for="formFile" class="form-label">seleccione imagenes de su propiedad</label>
-                <input class="form-control" type="file" id="formFile">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Escribe una breve descripcion de tu propiedad, como por ejemplo los metros cuadrados, ambientes, etc.</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <div class="col-12">
-                <button type="submit" class="btn btn-primary">Enviar datos</button>
-            </div>
-        </form>
-
+        <!-- section-formulario -->
+        <section>
+            <h2 class="titulo-h1 animate_animated animate__bounceIn">
+                Publica tu propiedad
+            </h2>
+            <form class="row g-3 p-3 w-100 ">
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Nombre</label>
+                    <input type="email" class="form-control" placeholder="ingrese su nombre" id="inputEmail4">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputPassword4" class="form-label">Apellido</label>
+                    <input type="password" class="form-control" placeholder="ingrese su apellido" id="inputPassword4">
+                </div>
+                <div class="col-12">
+                    <label for="inputAddress" class="form-label">Dirección</label>
+                    <input type="text" class="form-control" id="inputAddress"
+                        placeholder="Direccion de la propiedad a vender">
+                </div>
+                <label for="inputAddress" class="form-label">Email</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="Ingrese su Email">
+                <div class="col-12">
+                    <label for="inputAddress2" class="form-label">Número de telefono</label>
+                    <input type="text" class="form-control" id="inputAddress2"
+                        placeholder="Numero de area sin el 0 y sin el 15">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputCity" class="form-label">Ciudad</label>
+                    <input type="text" class="form-control" id="ciudad">
+                </div>
+                <div class="col-md-4">
+                    <label for="inputState" class="form-label">Provincia</label>
+                    <select id="inputState" class="form-select">
+                        <option selected>Buenos Aires</option>
+                        <option> La Pampa</option>
+                        <option> Catamarca</option>
+                        <option> Jujuy</option>
+                        <option> Cordoba</option>
+                    </select>
+                </div>
+                <div class="col-md-2">
+                    <label for="inputZip" class="form-label">Codigo postal</label>
+                    <input type="text" class="form-control" id="inputZip">
+                </div>
+                <div class="mb-3">
+                    <label for="formFile" class="form-label">seleccione imagenes de su propiedad</label>
+                    <input class="form-control" type="file" id="formFile">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Escribe una breve descripcion de tu
+                        propiedad, como por ejemplo los metros cuadrados, ambientes, etc.</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Enviar datos</button>
+                </div>
+            </form>
+        </section>
     </main>
+    <!-- pie de página -->
     <footer>
         <div class="container-footer">
             <div class="box-footer">
@@ -101,7 +119,8 @@
                     <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
                 </div>
                 <div class="terminos">
-                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
+                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y
+                        gestión
                         independiente. En cumplimiento de las leyes vigentes que regulan el corretaje inmobiliario, Ley
                         Nacional 25.028, Ley 22.802 de Lealtad Comercial, Ley 24.240 de Defensa al Consumidor, las
                         normas del Código Civil y Comercial de la Nación y Constitucionales, los agentes/gestores NO
@@ -136,12 +155,15 @@
             </div>
         </div>
     </footer>
+    <!-- script-bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
