--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- meta-viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
     <meta name="description"
         content="comprar vender o  alquilar cualquier propiedad esta al alcance en inmobiliaria martinez">
     <meta name="keywords" content="alquilar, vender, inmobiliaria, ph, edificio, comprar, tasaciones, campo, casa">
     <title>inmobiliaria martinez🏠</title>
+    <!-- icons -->
     <link rel="shortcut icon" href="../Trabajo practico nro 1/Media/favicon.ico">
     <link rel="shortcut icon" href="../Media/favicon.ico">
+    <!-- link css -->
     <link rel="stylesheet" href="./css/estilos.css">
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Poppins:wght@200&display=swap"
@@ -23,13 +28,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@500&display=swap"
         rel="stylesheet">
+    <!-- animate-animated -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- barra de navegacion -->
     <header>
         <input type="checkbox" id="btn-menu">
         <label for="btn-menu"><img src="./Images/imgindex/menu2.png" alt=""></label>
@@ -45,6 +52,7 @@
         </nav>
     </header>
     <main>
+        <!-- section home -->
         <section>
             <h1 class="titulo-h1 animate_animated animate__bounceIn">
                 Inmobiliaria Martinez... Mucho más que una mudanza
@@ -86,6 +94,7 @@
                 </div>
             </div>
         </section>
+        <!-- section ofertas -->
         <section>
             <div>
                 <h2 class=titulo-h2 animate_animated animate__bounceIn>
@@ -129,6 +138,7 @@
             </div>
         </section>
     </main>
+    <!-- pie de pagina -->
     <footer>
         <div class="container-footer">
             <div class="box-footer">
@@ -136,7 +146,8 @@
                     <img src="./Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
                 </div>
                 <div class="terminos">
-                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
+                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y
+                        gestión
                         independiente. En cumplimiento de las leyes vigentes que regulan el corretaje inmobiliario, Ley
                         Nacional 25.028, Ley 22.802 de Lealtad Comercial, Ley 24.240 de Defensa al Consumidor, las
                         normas del Código Civil y Comercial de la Nación y Constitucionales, los agentes/gestores NO
@@ -171,12 +182,15 @@
             </div>
         </div>
     </footer>
+    <!-- script-bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
